[metadata]
name = twitterati
version = 0.0.2
author = Jeanne Elizabeth Daniel
author_email = jeanne.e.daniel@gmail.com
description = A Python Package For Scraping Public Twitter with Twitter Developer API v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeannieDaniel/twitterati
project_urls =
    Bug Tracker = https://github.com/JeannieDaniel/twitterati/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi==2021.5.30
    chardet==3.0.4
    idna==2.10
    oauthlib==3.1.1
    python-dateutil==2.8.1
    PyYAML==5.4.1
    requests==2.25.0
    requests-oauthlib==1.3.0
    six==1.16.0
    urllib3==1.26.6



[options.packages.find]
where = src